# TargetDetector

./: .gitignore  CMakeLists.txt  README.md  center_correction_workbench.ipynb  detection_pipeline.ipynb
blk360/: BLK360G2.h
cpp/: CenterEstimation.cpp  CenterEstimation.h  DetectionRunner.cpp  PlyWriter.cpp  PlyWriter.h  PointCloudRegistration.cpp  PointCloudRegistration.h  PointStructures.h  logging.h
